[tool.poetry]
name = "0ver-department-keyword"
version = "2.0.0"
description = "0verKeyword of department search segmentation."
authors = ["hms5232 <hhming@mail.ncnu.edu.tw>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
ckiptagger = {extras = ["tf", "gdown"], version = "^0.2.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
