[project]
name = "0ver-department-keyword"
version = "3.0.0"
description = "0verKeyword of department search segmentation."
authors = [{ name = "hms5232", email = "hhming@mail.ncnu.edu.tw" }]
requires-python = "~=3.7"
license = "GPL-3.0-or-later"
dependencies = ["ckiptagger[tf, gdown]>=0.2.1,<0.3"]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
