[project]
name = "0ver-department-keyword"
version = "3.0.0"
description = "0verKeyword of department search segmentation."
authors = [{ name = "hms5232", email = "hhming@mail.ncnu.edu.tw" }]
requires-python = "~=3.9"
license = "GPL-3.0-or-later"
dependencies = [
    "ckiptagger[gdown,tf]>=0.2.1,<0.3",
    "tf-keras>=2.19.0",
]

[dependency-groups]
dev = []
